# deep-research

./: .gitignore  CLAUDE.md  pyproject.toml
src/: __init__.py  vc_research.py
src/ai/: __init__.py  claude.py  openai_ws.py  response.py
